# detect-AI

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.sh  test_models.py
.github/workflows/: main_ai-detector.yml
file_handlers/: file_processor.py
models/: distilbert_model.py  humanizer_model.py  line_analyzer.py  model_orchestrator.py  roberta_model.py  sbert_ffnn_model.py  simple_detector.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_api_optimizations.py
