[project]
name = "ai-detector-app"
version = "0.1.0"
description = "AI Text Detection Application with Multiple Models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]
